bynkc/tests/fixtures/positive/301_refined_matches_alternation/input.bynk
commons demo {
  type Code = String where Matches("ab|cd")
}
