bynkc/tests/fixtures/negative/357_embeds_variant_arity/input.bynk
commons demo.ea2
type E = enum { X }
type S = | A(a: E, b: E) embeds E as A
